--- a/Apps/CLI/CMakeLists.txt
+++ b/Apps/CLI/CMakeLists.txt
@@ -5,10 +5,8 @@ set_target_properties(RiftCLI PROPERTIES OUTPUT_NAME "Rift")
 target_include_directories(RiftCLI PUBLIC Include)
 file(GLOB_RECURSE CLI_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 target_sources(RiftCLI PRIVATE ${CLI_SOURCE_FILES})
-set_target_properties (RiftCLI PROPERTIES
-    CXX_STANDARD 20
-    FOLDER Rift
-)
+rift_target_enable_CPP20(RiftCLI)
+set_target_properties (RiftCLI PROPERTIES FOLDER Rift)
 target_link_libraries(RiftCLI PUBLIC Rift::Rift CLI11)
 rift_target_define_platform(RiftCLI)
 rift_target_shared_output_directory(RiftCLI)
