--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -4,10 +4,8 @@ add_executable(Rift::Editor ALIAS RiftEditor)
 target_include_directories(RiftEditor PUBLIC Include)
 file(GLOB_RECURSE RiftEditor_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 target_sources(RiftEditor PRIVATE ${RiftEditor_SOURCE_FILES})
-set_target_properties (RiftEditor PROPERTIES
-    CXX_STANDARD 20
-    FOLDER Rift
-)
+rift_target_enable_CPP20(RiftEditor)
+set_target_properties (RiftEditor PROPERTIES FOLDER Rift)
 target_link_libraries(RiftEditor PUBLIC Rift::Rift sokol imgui)
 rift_target_define_platform(RiftEditor)
 rift_target_shared_output_directory(RiftEditor)
