--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 .clangd
 Build
 Saved
+Testing
+
 .vscode/c_cpp_properties.json
 /compile_commands.json
-compile_commands.json
+compile_commands.json
 Programs/remedybg.exe
 *.rdbg
