--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -14,6 +14,13 @@ set(CMAKE_POLICY_DEFAULT_CMP0054 NEW)
 add_subdirectory(CLI11)
 
 
+find_package(OpenGL REQUIRED)
+add_library(gl3w STATIC gl3w/GL/gl3w.c)
+target_include_directories(gl3w PUBLIC gl3w)
+target_link_libraries(gl3w INTERFACE OpenGL::GL OpenGL::GLU)
+
+add_subdirectory(glfw)
+
 # Imgui
 add_library(imgui STATIC)
 target_include_directories(imgui PUBLIC imgui)
@@ -25,11 +32,11 @@ target_sources(imgui PRIVATE
     imgui/imgui_widgets.cpp
     imgui/misc/cpp/imgui_stdlib.cpp
     imgui/misc/fonts/binary_to_compressed_c.cpp
+    imgui/backends/imgui_impl_glfw.cpp
+    imgui/backends/imgui_impl_opengl3.cpp
 )
-set_property(TARGET imgui PROPERTY CXX_STANDARD 17)
+rift_target_enable_CPP20(imgui)
 set_target_properties (imgui PROPERTIES FOLDER Extern)
+target_link_libraries(imgui PRIVATE glfw gl3w)
 
 
-# Sokol
-add_library(sokol INTERFACE)
-target_include_directories(sokol INTERFACE sokol)
