--- a/.github/workflows/linux-cicd.yml
+++ b/.github/workflows/linux-cicd.yml
@@ -32,7 +32,7 @@ jobs:
         uses: snickerbockers/submodules-init@v4
 
       - name: Install dependencies
-        run: sudo apt-get install build-essential xz-utils curl libx11-dev xorg-dev libglu1-mesa-dev
+        run: sudo apt -y install build-essential xz-utils curl libx11-dev xorg-dev libglu1-mesa-dev
 
       - name: Get CMake
         uses: lukka/get-cmake@latest
