--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,7 +97,8 @@
         "codecvt": "cpp",
         "compare": "cpp",
         "coroutine": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "cwctype": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "banditTestExplorer.testsuites": [
