--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,8 @@
         "compare": "cpp",
         "coroutine": "cpp",
         "*.tcc": "cpp",
-        "cwctype": "cpp"
+        "cwctype": "cpp",
+        "*.rh": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "banditTestExplorer.testsuites": [
