Added Resources paths and fonts

--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -9,6 +9,7 @@ set_target_properties (RiftEditor PROPERTIES FOLDER Rift)
 target_link_libraries(RiftEditor PUBLIC
     Rift::Rift
     Rift::UI
+    CLI11
 )
 rift_target_define_platform(RiftEditor)
 rift_target_shared_output_directory(RiftEditor)
