--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,9 @@
         "coroutine": "cpp",
         "*.tcc": "cpp",
         "cwctype": "cpp",
-        "*.rh": "cpp"
+        "*.rh": "cpp",
+        "bit": "cpp",
+        "stop_token": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "banditTestExplorer.testsuites": [
