--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -110,7 +110,16 @@
         "fft": "cpp",
         "nonlinearoptimization": "cpp",
         "alignedvector3": "cpp",
-        "core": "cpp"
+        "core": "cpp",
+        "orderingmethods": "cpp",
+        "*.evaluator": "cpp",
+        "*.expression": "cpp",
+        "adolcforward": "cpp",
+        "autodiff": "cpp",
+        "bvh": "cpp",
+        "mprealsupport": "cpp",
+        "matrixfunctions": "cpp",
+        "openglsupport": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "banditTestExplorer.testsuites": [
