Added compilation pipeline to generated cpp code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,7 +119,40 @@
         "bvh": "cpp",
         "mprealsupport": "cpp",
         "matrixfunctions": "cpp",
-        "openglsupport": "cpp"
+        "openglsupport": "cpp",
+        "cholesky": "cpp",
+        "cholmodsupport": "cpp",
+        "eigenvalues": "cpp",
+        "geometry": "cpp",
+        "householder": "cpp",
+        "iterativelinearsolvers": "cpp",
+        "jacobi": "cpp",
+        "lu": "cpp",
+        "metissupport": "cpp",
+        "pastixsupport": "cpp",
+        "pardisosupport": "cpp",
+        "qr": "cpp",
+        "spqrsupport": "cpp",
+        "svd": "cpp",
+        "sparse": "cpp",
+        "sparsecholesky": "cpp",
+        "sparsecore": "cpp",
+        "sparselu": "cpp",
+        "sparseqr": "cpp",
+        "superlusupport": "cpp",
+        "umfpacksupport": "cpp",
+        "tensor": "cpp",
+        "tensorsymmetry": "cpp",
+        "threadpool": "cpp",
+        "eulerangles": "cpp",
+        "iterativesolvers": "cpp",
+        "kroneckerproduct": "cpp",
+        "levenbergmarquardt": "cpp",
+        "numericaldiff": "cpp",
+        "polynomials": "cpp",
+        "sparseextra": "cpp",
+        "specialfunctions": "cpp",
+        "splines": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "banditTestExplorer.testsuites": [
