--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -14,9 +14,31 @@ Size=550,680
 Collapsed=0
 
 [Window][Project Picker]
-Pos=528,346
-Size=224,208
+Pos=351,186
+Size=240,227
 Collapsed=0
 
+[Window][DockSpaceViewport_11111111]
+Pos=0,23
+Size=1920,978
+Collapsed=0
+
+[Window][Abstract Syntax Tree]
+Pos=0,449
+Size=333,552
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][File Explorer]
+Pos=0,23
+Size=333,424
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,52 Size=1920,978 Split=X
+  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=333,877 Split=Y Selected=0x2F614AC3
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=264,380 Selected=0x33BD06D4
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=264,495 Selected=0x2F614AC3
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=1585,877 CentralNode=1
 
