--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -24,21 +24,85 @@ Size=1280,877
 Collapsed=0
 
 [Window][Abstract Syntax Tree]
-Pos=0,405
-Size=632,495
+Pos=0,599
+Size=243,301
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
 
 [Window][File Explorer]
 Pos=0,23
-Size=632,380
+Size=243,574
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][###C:\Projects\Rift\Project\functions.rf]
+Pos=197,23
+Size=1083,877
+Collapsed=0
+
+[Window][Properties]
+Pos=197,46
+Size=1083,854
+Collapsed=0
+DockId=0xADFF2360,0
+
+[Window][###C:\Projects\Rift\Project\testi.rf]
+Pos=197,23
+Size=1083,877
+Collapsed=0
+
+[Window][Properties##]
+ViewportPos=446,285
+ViewportId=0x90430964
+Size=1083,854
+Collapsed=0
+
+[Window][###17]
+Pos=197,23
+Size=1083,877
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][###14]
+Pos=197,23
+Size=1083,877
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Properties##17]
+Pos=969,46
+Size=311,854
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][testi.rf##17]
+Pos=245,23
+Size=1035,877
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Properties##14]
+Pos=245,46
+Size=1035,854
+Collapsed=0
+DockId=0xC84386F0,0
+
+[Window][functions.rf##14]
+Pos=245,23
+Size=1035,877
+Collapsed=0
+DockId=0x00000003,1
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,202 Size=1280,877 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=632,877 Split=Y Selected=0x2F614AC3
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=264,380 Selected=0x33BD06D4
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=264,495 Selected=0x2F614AC3
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=646,877 CentralNode=1
+DockNode      ID=0x00000001 Pos=430,202 Size=1083,877 Selected=0xB62FF81D
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,202 Size=1280,877 Split=X Selected=0x3BF9677E
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=243,877 Split=Y Selected=0x2F614AC3
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=163,574 Selected=0x33BD06D4
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=163,301 Selected=0x2F614AC3
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,877 CentralNode=1 Selected=0x3BF9677E
+DockSpace     ID=0xADFF2360 Pos=366,225 Size=1083,854 CentralNode=1 Selected=0xC89E3217
+DockSpace     ID=0xC84386F0 Pos=318,148 Size=1035,854 CentralNode=1 Selected=0xDE7D67BC
+DockSpace     ID=0xCF504F73 Window=0x3BF9677E Pos=446,225 Size=1035,854 Split=X
+  DockNode    ID=0x00000006 Parent=0xCF504F73 SizeRef=771,854 CentralNode=1
+  DockNode    ID=0x00000007 Parent=0xCF504F73 SizeRef=311,854 Selected=0x47743606
 
