--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -93,13 +93,26 @@ Size=1035,877
 Collapsed=0
 DockId=0x00000003,1
 
+[Window][Properties##13]
+Pos=245,46
+Size=1035,854
+Collapsed=0
+DockId=0x76B56F18,0
+
+[Window][functions.rf##13]
+Pos=245,23
+Size=1035,877
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
 DockNode      ID=0x00000001 Pos=430,202 Size=1083,877 Selected=0xB62FF81D
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=73,125 Size=1280,877 Split=X Selected=0x3BF9677E
+DockSpace     ID=0x76B56F18 Window=0xE393D48D Pos=286,116 Size=1035,854 CentralNode=1 Selected=0x4019F21F
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,93 Size=1280,877 Split=X Selected=0x3BF9677E
   DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=243,877 Split=Y Selected=0x2F614AC3
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=163,574 Selected=0x33BD06D4
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=163,301 Selected=0x2F614AC3
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,877 CentralNode=1 Selected=0x3BF9677E
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1035,877 CentralNode=1 Selected=0xE393D48D
 DockSpace     ID=0xADFF2360 Pos=366,225 Size=1083,854 CentralNode=1 Selected=0xC89E3217
 DockSpace     ID=0xC84386F0 Pos=318,148 Size=1035,854 CentralNode=1 Selected=0xDE7D67BC
 DockSpace     ID=0xCF504F73 Pos=446,225 Size=1035,854 Split=X
