--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -108,7 +108,7 @@ DockId=0x00000003,0
 [Docking][Data]
 DockNode      ID=0x00000001 Pos=430,202 Size=1083,877 Selected=0xB62FF81D
 DockSpace     ID=0x76B56F18 Pos=286,116 Size=1035,854 CentralNode=1 Selected=0x4019F21F
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,157 Size=1280,877 Split=X Selected=0x3BF9677E
+DockSpace     ID=0x8B93E3BD Pos=105,157 Size=1280,877 Split=X Selected=0x3BF9677E
   DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=243,877 Split=Y Selected=0x2F614AC3
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=163,574 Selected=0x33BD06D4
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=163,301 Selected=0x2F614AC3
