--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,7 @@
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/Project",
-            "environment": [],
-            "console": "integratedTerminal"
+            "terminal": "integrated"
         },
         {
             "name": "Test Core",
