--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -35,3 +35,6 @@ target_sources(imgui PRIVATE
 rift_target_enable_CPP20(imgui)
 set_target_properties (imgui PROPERTIES FOLDER Extern)
 target_link_libraries(imgui PRIVATE glfw gl3w)
+
+add_library(IconFontCppHeaders INTERFACE)
+target_include_directories(IconFontCppHeaders INTERFACE IconFontCppHeaders)
