Added icons to executables, added CLI arguments

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "lldb",
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
-            "args": [],
+            "args": [
+                "${workspaceFolder}/Project"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/Project",
             "console": "integratedTerminal"
