--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -43,3 +43,4 @@ target_include_directories(IconFontCppHeaders INTERFACE IconFontCppHeaders)
 find_package(LLVM CONFIG REQUIRED)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+llvm_map_components_to_libnames(llvm_libs core)
