--- a/.github/workflows/macos-cicd.yml
+++ b/.github/workflows/macos-cicd.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   Build:
     name: Build ${{ matrix.name }} (${{ matrix.build-type }})
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
@@ -14,7 +14,6 @@ jobs:
         include:
           - name: Clang
             compiler: clang
-            os: macos-latest
             cxx: clang++
             cc: clang
 
