--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,12 @@ jobs:
       - name: Init Submodules
         uses: snickerbockers/submodules-init@v4
 
+      - name: Install dependencies
+        if: ${{ matrix.os-name == 'linux'}}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential xz-utils curl libx11-dev xorg-dev libglu1-mesa-dev
+
       - name: Get CMake
         uses: lukka/get-cmake@latest
 
