--- a/Libs/Backends/CPP/CMakeLists.txt
+++ b/Libs/Backends/CPP/CMakeLists.txt
@@ -1,20 +1,20 @@
 
 file(GLOB_RECURSE BACKEND_CPP_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 
-add_library(RiftBackendCPP STATIC)
-add_library(Rift::Backend::CPP ALIAS RiftBackendCPP)
-target_include_directories(RiftBackendCPP PUBLIC Include)
-target_sources(RiftBackendCPP PRIVATE ${BACKEND_CPP_SOURCE_FILES})
-rift_target_enable_CPP20(RiftBackendCPP)
-set_target_properties (RiftBackendCPP PROPERTIES FOLDER Rift)
-rift_target_define_platform(RiftBackendCPP)
-rift_target_shared_output_directory(RiftBackendCPP)
-target_link_libraries(RiftBackendCPP PUBLIC
+add_library(RiftBackendCpp STATIC)
+add_library(Rift::Backend::Cpp ALIAS RiftBackendCpp)
+target_include_directories(RiftBackendCpp PUBLIC Include)
+target_sources(RiftBackendCpp PRIVATE ${BACKEND_CPP_SOURCE_FILES})
+rift_target_enable_CPP20(RiftBackendCpp)
+set_target_properties (RiftBackendCpp PROPERTIES FOLDER Rift)
+rift_target_define_platform(RiftBackendCpp)
+rift_target_shared_output_directory(RiftBackendCpp)
+target_link_libraries(RiftBackendCpp PUBLIC
     Rift::Rift
     ${llvm_libs}
 )
 
-install(TARGETS RiftBackendCPP
+install(TARGETS RiftBackendCpp
     EXPORT RiftTargets
     LIBRARY DESTINATION Lib
     ARCHIVE DESTINATION Lib
